# lumastir

./: README.md  pyproject.toml
configs/: 3led_3motor.yaml  3led_6fan.yaml  3led_6motor.yaml
deploy/: lumastir.service
src/: lumastir.py
src/lumastir/: __init__.py  cli.py  controller.py  demo.py  server.py
